[package]
name = "rcache"
version = "0.1.0"
edition = "2021"

[dependencies]
async-trait = "0.1.88"
bincode = "1.3.3"
env_logger = "0.11.8"
hex = "0.4.3"
lazy_static = "1.5.0"
log = "0.4.27"
md-5 = "0.10.6"
prometheus = "0.14.0"
serde = { version = "1.0.219", features = ["derive"] }
sled = "0.34.7"
tokio = { version = "1.46.1", features = ["full"] }
